Mon Apr 26 12:20:54 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* FvwmForm/FormFvwmSetup.in: Don't require trailing slash in
 	FVWM_USERHOME variable.

1999-04-26  Matthias Clasen  <clasen@pong.mathematik.uni-freiburg.de>

	* FvwmGtk/FvwmGtk.c (menu_item_new_with_pixmap_and_label): 
	dont use accel labels, since accelerators won't work anyway.
	(convert_label_with_ampersand): 
	(create_label_pattern): functions from gtkcauldron.c in the
	gnome-libs package for dealing with underlined accelerators.
	(get_menu_accel_group): function from gnome-app-helper.c in
	the gnome-libs package.  
	(menu_item_new_with_pixmap_and_label): use the "stolen" functions
	above to implement keyboard navigation like in fvwms native menus.

	* FvwmGtk/FvwmGtk.1: document document underlined accelerators.

Mon Apr 26 01:33:51 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* FvwmTaskBar/Mallocs.h:
	* FvwmScroll/FvwmScroll.h: 
	* FvwmScroll/FvwmScroll.h: 
	* FvwmIdent/FvwmIdent.h: 
	* FvwmIconBox/FvwmIconBox.h: remove prototypes for CatString2 and
	CopyString.  Both are now in libs.

Fri Apr 23 13:22:14 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* FvwmWinList/List.c (PrintList): fix up printing of flags.  This
 	really needs a general solution in libfvwm.  flagstoascii()
 	anyone?

	* FvwmWinList/FvwmWinList.c (ProcessMessage): initialize cfgpacket
 	before dereferencing it.

1999-04-22  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmGtk/FvwmGtk.c (parse_argument): use new function
	GetNextSimpleOption instead of old name GetNextOption.
	Removed C++ comment.

1999-04-22  Bob Woodside  <proteus@pcnet.com>

	* modules/FvwmPager/x_pager.c: Changed "Desk" command (which we've
	documented as obsolete) to "GoToDesk".

1999-04-22  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmCommand/FvwmCommandS.c: fixed bug that caused FvwmCommandS to
	die with 2.2.x Linux kernels.

1999-04-20  Bob Woodside  <proteus@pcnet.com>

	* modules/FvwmTaskbar/FvwmTaskBar.c: GSFR.